2006-09-25  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/background-manager.c: Fixed a few problems
	  with the different modes

2006-09-25  Moises Martinez <moises.martinzes@nokia.com>

	* libdesktop/hildon-log.c: Code cleanup.
	* Makefile.am: added libdesktop.a
	* hildon-navigator/Makefile.am: removed libdesktop.a

2006-09-25  Moises Martinez <moises.martinzes@nokia.com>

	* hildon-status-bar/hildon-log.[ch]: Removed.
	* Makefile.am: Added libdesktop/hildon-log.[ch]

2006-09-25  Moises Martinez <moises.martinzes@nokia.com>

	* hildon-navigator/regenerate_config.c: Improved

2006-09-22  Johan Bilien <johan.bilien@nokia.com>

	Applied fix to "AF-BAT:Able to launch the Task launcher using the
	shortcuts in some cases when it is not possible from device".
	Fixes: NB#37594
	* hn-wm.c:
	  - Added tracking of the "_MB_NUM_MODAL_WINDOWS_PRESENT" MB
	  property
	  - Do not trigger an shortcut if there is a system modal window
	* hn-app-switcher.c: Do not handle HOME key when there is a system
	  modal window

2006-09-22  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/hildon-home-area.c:
	  - when selecting applets, add all applets first, then go to layout
	    mode if required, then remove the applets.
	* hildon-home/hildon-home-window.c: Added layout mode banner
	* hildon-home/hildon-home-titlebar.c:
	  - changed order of Tools submenu
	  - set name layout mode menu to get proper positioning

2006-09-22  Moises Martinez <moises.martinzes@nokia.com>

	* hildon-navigator/regenerate_config.c:
  	- New helper program for postrm tn's plugin
          packages. Fixes: NB#36990

2006-09-22  Moises Martinez <moises.martinzes@nokia.com>

	* hildon-navigator/hildon-navigator-window.c:
        - Fixed initialization of hildon_dnotify_handler

2006-09-22  Tomas Junnonen <tomas.junnonen@nokia.com>

	Applied fix to "Shortcuts requiring modifiers fail to work most of the
	time". Fixes: NB#37546
	* hildon-navigator/hn-keys.c: Only return the shortcut on keypress